2003-10-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkImgPhoto.c (ImgPhotoBlendComplexAlpha): add alpha
	blending for images with partial transparency.  Only operates for
	15bpp+ display. [Bug 809157]

2003-10-29  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tkUnixRFont.c: Some cleaning up to get the file more in
	lines with the general style guidelines.  [Bug 832091]  Still many
	comments needed (from someone who knows the code!) for the style
	guide to be satisfied, so bug still open.

	* library/tkfbox.tcl (IconList_Create,IconList_Add): Added option
	munging to allow some control of foreground colours on Unix in the
	same way that you can influence the background.  [Bug 795717]

2003-10-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixFont.c (GetFontAttributes): place extra check for NULL
	family against bad X servers.

	* win/tkWinImage.c (XGetImageZPixmap): add separate 16bpp
	XGetImage code to correctly handle 16bpp requests.  This appears
	to never have worked correctly.

	* tests/focusTcl.test (setup1): expand frame size to allow for
	correct visibility of windows that use larger default fonts.

2003-10-28  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/tk.tcl (::tk::PlaceWindow): Added check for empty string
	first when determining placement strategy. [Bug 819284]

2003-10-23  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXDialog.c (NavServicesGetFile): Minor cleanups.
	(OpenFileFilterProc): Handle FSRef's as well as FSSpec's in the input
	file.  Also convert the FSSpec filename to an C-string before passing
	to MatchOneFile.  [bug 517600]
	(MatchOneFile): Require the input filename to be a C-string, not a
	pascal string.

2003-10-22  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/dialog.tcl (tk_dialog): Constrain the dialog to be
	fairly sensibly sized and placed.  [Bug 827535]

2003-10-15  Joe English  <jenglish@users.sourceforge.net>
	* unix/tkUnixWm.c, tests/unixWm.test: Delete WM_TRANSIENT_FOR